--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="header"> 
     <div class="container">
     <nav class="navbar navbar-expand-lg  navbar-light fixed-top bg-primary">
-      <a class="icon" href="#top"><img src="images\logo.svg"></a>
+      <a class="icon" href="#top"><img src="images\logo.svg" alt="logo-img"></a>
     <button
     class="navbar-toggler"
     type="button" 
@@ -54,9 +54,9 @@
     </div>
   </nav>
 </div>
-  <img class="arrow" src="images/icon-arrow-down.svg">
-    <img src="/images/desktop/image-header.jpg" class="img-fluid" id="img-desktop-header">
-    <img src="/images/mobile/image-header.jpg" class="img-fluid"  id="img-mobile-header">
+  <img class="arrow" src="images/icon-arrow-down.svg" alt="icon-arrow-down">
+    <img src="/images/desktop/image-header.jpg" class="img-fluid" alt="Stand Out" id="img-desktop-header">
+    <img src="/images/mobile/image-header.jpg" class="img-fluid"  alt="Stand Out" id="img-mobile-header">
       <h1 class="titulo"> WE ARE CREATIVES</h1>
   </div>
   </div>
@@ -176,13 +176,13 @@
       <img src="/images/desktop/image-gallery-milkbottles.jpg" alt="milkbottles.jpg" class="img-fluid">
     </div>
     <div class="col-6 col-sm">
-      <img src="images/desktop/image-gallery-orange.jpg"alt="gallery-orange.jpg" class="img-fluid">
+      <img src="images/desktop/image-gallery-orange.jpg" alt="gallery-orange.jpg" class="img-fluid">
     </div>
     <div class="col-6 col-sm">
-      <img src="images/desktop/image-gallery-cone.jpg"alt="gallery-cone.jpg" class="img-fluid">
+      <img src="images/desktop/image-gallery-cone.jpg" alt="gallery-cone.jpg" class="img-fluid">
     </div>
     <div class="col-6 col-sm">
-      <img src="images/desktop/image-gallery-sugarcubes.jpg"alt="sugarcubes.jpg" class="img-fluid">
+      <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="sugarcubes.jpg" class="img-fluid">
     </div>
 </div>
 </section>
@@ -207,6 +207,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/JeanCornelio">Jean Michael Cornelio</a>.
+    <a href="babymayor.html" aria-label="Read more about Seminole's new baby mayor">[Read more...]</a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
