--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h3>Transform your brand</h3>
         <p>We are a full-service creative agency specializing in helping brands grow fast.
           Engage your clients through compelling visuals that do most of the marketing for you.</p>
-        <a href="#">LEARN MORE<hr></a>
+        <a href="#">LEARN MORE</a>
       </div>
       </div>
       <div class="col2">
@@ -85,7 +85,7 @@
         <h3>Stand out to the right audience</h3>
         <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters,
           we’ll build and extend your brand in digital places.</p>
-        <a href="#">LEARN MORE<hr></a>
+        <a href="#">LEARN MORE</a>
       </div>
       </div>
     </div>
